--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-sidebar.html.twig
@@ -56,6 +56,11 @@
           </a>
         </li>
         <li>
+          <a href="{{ path('activity_index') }}" class="waves-effect waves-blue"><i
+                    class="mdi mdi-editor-insert-chart"></i> Activity
+          </a>
+        </li>
+        <li>
           <a href="{{ path('upgrade_index') }}" class="waves-effect waves-blue">
             <i class="fa fa-arrow-circle-o-up"></i> Upgrade Plan
           </a>
