--- a/src/DashboardBundle/Resources/views/Activity/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Activity/index.html.twig
@@ -8,90 +8,17 @@
                 <h5>Activity</h5>
             </div>
             <div class="content">
-                <div class="col s4">
-                    <div class="card-panel orders-card">
-                        {%  set sent_percent = (subaccount.sent_total / subaccount.custom_quota * 100) | number_format(0) %}
-                        <h4>{{ subaccount.sent_total }} / {{ subaccount.custom_quota }}</h4>
-                        <div class="row">
-                            <div class="col s6">
-                                <small>Total Sent</small>
-                            </div>
-                            <div class="col s6 right-align">
-                                {{ sent_percent }}%
-                            </div>
-                        </div>
-                        <div class="progress small">
-                            <div class="determinate" style="width: {{ sent_percent }}%"></div>
-                        </div>
-                        {%  set delivery_percent = (subaccount.last_30_days.sent / subaccount.sent_total * 100) | number_format(0) %}
-                        <h4>{{ subaccount.last_30_days.sent }}</h4>
-                        <div class="row">
-                            <div class="col s6">
-                                <small>Delivered (Last 30 days)</small>
-                            </div>
-                            <div class="col s6 right-align">
-                                {{ delivery_percent }}%
-                            </div>
-                        </div>
-                        <div class="progress small">
-                            <div class="determinate" style="width: {{ delivery_percent }}%"></div>
-                        </div>
-                        {%  set open_percent = (subaccount.last_30_days.unique_opens / subaccount.sent_total * 100) | number_format(0) %}
-                        <h4>{{ subaccount.last_30_days.unique_opens }}</h4>
-                        <div class="row">
-                            <div class="col s6">
-                                <small>Unique Opens (Last 30 days)</small>
-                            </div>
-                            <div class="col s6 right-align">
-                                {{ open_percent }}%
-                            </div>
-                        </div>
-                        <div class="progress small">
-                            <div class="determinate" style="width: {{ open_percent }}%"></div>
-                        </div>
-                    </div>
+                {# Include Widgets #}
+                <div class="col s3">
+                    {{ include('DashboardBundle:Activity/Partials:_widgets.html.twig') }}
                 </div>
 
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Flyer</th>
-                            <th>Property</th>
-                            <th>Subject</th>
-                            <th style="text-align: center">Total Sent</th>
-                            <th style="text-align: center">Unique Opens</th>
-                            <th style="text-align: center">Created</th>
-                            <th style="text-align: center">Last sent</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for activity in activities %}
-                            <tr>
-                                <td>{{ activity.flyer.name }}</td>
-                                <td>
-                                    <a href="{{ path('properties_design', {'property_id':activity.flyer.property.id}) }}">
-                                        {{ activity.flyer.property.name }}
-                                    </a>
-                                </td>
-                                <td>{{ activity.flyer.subject }}</td>
-                                <td style="text-align: center">
-                                    0
-                                </td>
-                                <td style="text-align: center">
-                                    0
-                                </td>
-                                <td style="text-align: center">{{ activity.flyer.creationDate | date('M d') }}</td>
-                                <td style="text-align: center">{{ activity.flyer.lastSentDate | date('M d h:i') }}</td>
-                                <td style="text-align: center">
-                                    <a href="{{ path('activity_detail', {'id':activity.flyer.id}) }}">
-                                        Details
-                                    </a>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                <div class="col s9">
+                    {{ include('DashboardBundle:Activity/Partials:_chart_activity_month.html.twig') }}
+                </div>
+
+                {# Include Activity List #}
+                {{ include('DashboardBundle:Activity/Partials:_activity_list.html.twig') }}
             </div>
         </div>
     </div>
@@ -99,5 +26,9 @@
 {% endblock content %}
 
 {% block javascripts %}
-
+    {{ parent() }}
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/data.js"></script>
+    <script src="https://code.highcharts.com/modules/drilldown.js"></script>
 {% endblock javascripts%}
