--- a/src/DashboardBundle/Resources/views/Upgrade/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Upgrade/index.html.twig
@@ -57,7 +57,7 @@
                   <div class="circle" style="border: solid 1px #42A5F5;width: 70px;height: 70px;padding-top: 13px;">
                     <span style="font-size: 16px;color: #42A5F5;font-weight: 600;"> ${{ plan.price | number_format(2) }} </span>
                     <br>
-                    <span style="font-size: 12px;color: #42A5F5"> a mouth </span>
+                    <span style="font-size: 12px;color: #42A5F5"> / month </span>
                   </div>
                 </center>
               </div>
