--- a/src/DashboardBundle/Resources/views/Activity/index.html.twig
+++ b/src/DashboardBundle/Resources/views/Activity/index.html.twig
@@ -8,6 +8,7 @@
                 <h5>Activity</h5>
             </div>
             <div class="content">
+                {% if subacount is defined %}
                 {# Include Widgets #}
                 <div class="col s3">
                     {{ include('DashboardBundle:Activity/Partials:_widgets.html.twig') }}
@@ -19,6 +20,11 @@
 
                 {# Include Activity List #}
                 {{ include('DashboardBundle:Activity/Partials:_activity_list.html.twig') }}
+                {% else %}
+                    <div style="text-align: center">
+                        <h4> Activity not found </h4>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
