--- a/src/UserBundle/Resources/views/Profile/Partials/_profile-form.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_profile-form.html.twig
@@ -1,4 +1,4 @@
-<div id="edit-profile-container">
+<div id="edit-profile-container" style="{{ hidden is defined and hidden ? 'display: none' : '' }}">
     <div class="row" style="padding-left: 20px;padding-right: 20px">
         {{ form_start(profile_form, {'action': path('profile_save'), 'method': 'POST', 'id':'profile_form'}) }}
         <div class="row" style="margin-top: 0rem;">
@@ -50,7 +50,8 @@
             <div class="col m6" style="padding-bottom: 0px;">
                 <div class="input-field">
                     {{ form_widget(profile_form.gender) }}
-                    <label for="profile_gender" style="transform: translateY(-170%);left: 0px;font-size: .8rem;">Gender</label>
+                    <label for="profile_gender"
+                           style="transform: translateY(-170%);left: 0px;font-size: .8rem;">Gender</label>
                 </div>
             </div>
             <div class="col m6" style="padding-bottom: 0px;">
@@ -71,7 +72,8 @@
             <div class="col m6" style="padding-bottom: 0px;">
                 <div class="input-field">
                     {{ form_widget(profile_form.office_phone, {'attr': {'class':'validate','data-inputmask':"'mask': '(999) 999-9999'"}}) }}
-                    <label for="profile_office_phone" style="transform: translateY(-170%);left: 0px;">Office Phone</label>
+                    <label for="profile_office_phone" style="transform: translateY(-170%);left: 0px;">Office
+                        Phone</label>
                 </div>
             </div>
         </div>
@@ -111,3 +113,18 @@
         {{ form_end(profile_form) }}
     </div>
 </div>
+
+<script>
+    $(document).ready(function () {
+        //Initialize
+        var picker = new Pikaday({
+            field: document.getElementById('profile_birth_date'),
+            format: 'L'
+        });
+
+        picker.setDate({{ "now" | date("m/d/Y") }});
+
+        $('#profile_birth_date').attr('type', 'text');
+        $('#profile_website').attr('type', 'url');
+    });
+</script>
